Remove vevo/yml, polish/update code/deps

--- a/src/jade/provider/dailymotion.pug
+++ b/src/jade/provider/dailymotion.pug
@@ -6,8 +6,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#dailymotion
 #dailymotion-id(style="display:none")
   h6.top20: strong Dailymotion-ID manuell ermitteln
   p.
-    Sobald Sie die Einzelansicht des gewünschten Videos auf der Dailymotion-Seite aufgerufen haben, können Sie die benötigte ID
-    des Objekts aus mehreren Quellen ablesen/kopieren:
+    Sobald Sie die Einzelansicht des gewünschten Videos auf der Dailymotion-Seite aufgerufen haben, können Sie die benötigte ID des Objekts aus mehreren Quellen ablesen/kopieren:
   ol
     li
       | Oben aus der angezeigten Browser-URL:
