--- a/src/jade/provider/liveleak.pug
+++ b/src/jade/provider/liveleak.pug
@@ -6,8 +6,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#liveleak-id
 #liveleak-id(style="display:none")
   h6.top20: strong Liveleak-ID manuell ermitteln
   p.
-    Sobald Sie die Einzelansicht des gewünschten Videos auf der Liveleak-Seite aufgerufen haben, können Sie die benötigte ID
-    des Objekts folgendermaßen ermitteln:
+    Sobald Sie die Einzelansicht des gewünschten Videos auf der Liveleak-Seite aufgerufen haben, können Sie die benötigte ID des Objekts folgendermaßen ermitteln:
   ol
     li
       | Klicken Sie auf die Schaltfläche <span class="label red">Embed Code</span>:
