--- a/src/jade/provider/metacafe.pug
+++ b/src/jade/provider/metacafe.pug
@@ -8,8 +8,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#metacafe-id
 #metacafe-id(style="display:none")
   h6.top20: strong Metacafe-ID manuell ermitteln
   p.
-    Sobald Sie die Einzelansicht des gewünschten Videos auf der Metacafe-Seite aufgerufen haben, können Sie die benötigte ID
-    des Objekts aus verschiedenen Quellen ermitteln:
+    Sobald Sie die Einzelansicht des gewünschten Videos auf der Metacafe-Seite aufgerufen haben, können Sie die benötigte ID des Objekts aus verschiedenen Quellen ermitteln:
   ol
     li
       | Oben aus der angezeigten Browser-URL (die einfachste Methode):
