--- a/src/jade/provider/slideshare.pug
+++ b/src/jade/provider/slideshare.pug
@@ -2,10 +2,8 @@
 p <b>Slideshare</b> ist eine Plattform für Präsentationen. Folgende Parameter sind möglich:
 h6.top20 <span class="label">slide</span> &mdash; Präsentation ab einer bestimmten Seite starten
 p.
-  Falls Sie die Slideshare-Präsentation nicht von Anfang an, sondern ab einer bestimmten Seite ("Slide") starten wollen,
-  können Sie dies mit dem <span class="code">slide</span>-Parameter einstellen. Im Parameterwert wird die gewünschte Startseite
-  spezifiziert. Das Videoload-Beispiel
-p.text-center: span.code #{lt}div class="html5video slideshare <b>slide-3</b>" id="{eine-slideshare-id}"#{gt}#{lt}/div#{gt}
+  Falls Sie die Slideshare-Präsentation nicht von Anfang an, sondern ab einer bestimmten Seite ("Slide") starten wollen, können Sie dies mit dem <span class="code">slide</span>-Parameter einstellen. Im Parameterwert wird die gewünschte Startseite spezifiziert. Das Videoload-Beispiel
+p.text-center: span.code !{lt}div class="html5video slideshare <b>slide-3</b>" id="{eine-slideshare-id}"!{gt}!{lt}/div!{gt}
 p startet die Präsentation auf der dritten Seite.
 h6.top20: strong Beispiele
 p Es soll eine Slideshare-Präsentation mit der ID 'v2pxR8RN6Bl5Ve' in einem Blogbeitrag eingebunden werden:
