--- a/src/jade/provider/strawpoll.pug
+++ b/src/jade/provider/strawpoll.pug
@@ -4,7 +4,7 @@ p.
 h6.top20: strong Eine Umfrage anlegen
 p.
   Bevor Sie eine Umfrage in einen Twoday-Beitrag einbetten können, müssen Sie diese zunächst unter
-  <a target="_blank" href="http://www.strawpoll.me">strawpoll.me</a> anlegen.
+  <a target="_blank" href="https://www.strawpoll.me">strawpoll.me</a> anlegen.
 ol
   li 
     | Tippen Sie Ihre Frage und die zugehörigen Antwortoptionen in das gelbe Formular der Strawpoll-Seite ein.
