--- a/src/videoload2-tool.less
+++ b/src/videoload2-tool.less
@@ -27,13 +27,16 @@ legend i {
   width: 123px;
   margin-right: 5px;
 }
+.postfix.jscolor {
+  cursor: pointer;
+  margin-left: -1px;
+  border-color: #ccc;
+  outline: none;
+  padding: 0;
+}
 .snippet-wrap pre.sh_sourceCode {
   white-space: pre-wrap;
 }
-.postfix.jscolor {
-  cursor:pointer;
-  margin-left:-1px;
-  border-color:#ccc;
-  outline:none;
-  padding:0;
+.tiny.radius {
+  outline: none;
 }
