--- a/src/jade/provider/bandcamp.pug
+++ b/src/jade/provider/bandcamp.pug
@@ -1,8 +1,6 @@
 //- Bandcamp documentation of parameters
 p.
-  <b>Bandcamp</b> ist ein Anbieter von Audiostücken, der sehr umfangreiche Anpassungsmöglichkeiten für die Anzeige bietet.
-  Die maximale Anzeigebreite eines Bandcamp-Elements beträgt 700 Pixel. Mit Videoload können Sie folgende Einstellungen über
-  Parameter vornehmen:
+  <b>Bandcamp</b> ist ein Anbieter von Audiostücken, der sehr umfangreiche Anpassungsmöglichkeiten für die Anzeige bietet. Die maximale Anzeigebreite eines Bandcamp-Elements beträgt 700 Pixel. Mit Videoload können Sie folgende Einstellungen über Parameter vornehmen:
 h6.top20 <span class="label">layout</span> &mdash; Layout festlegen
 p Bandcamp bietet drei mögliche Layouts an:
 table
@@ -41,32 +39,20 @@ table
 p Für die Einstellung <span class="code">layout-<b>artworkonly</b></span> wird der artwork-Parameter automatisch auf <b>big</b> eingestellt.
 h6.top20 <span class="label">bgcol</span> &mdash; Hintergrundfarbe festlegen
 p.
-  Mit diesem Parameter können Sie eine individuelle Hintergrundfarbe für das Bandcamp-Element festlegen. Fehlt der
-  Parameter, wird die Standardhintergrundfarbe weiß (Hexcode: #ffffff) angenommen. Möchten Sie z.B. einen dunkleren
-  Hintergrund anzeigen, wählen Sie mit <span class="code">bgcol-<b>333333</b></span> ein
-  <span style="background-color:#333;color:#fff;padding:0 5px">dunkles Grau</span> aus.
+  Mit diesem Parameter können Sie eine individuelle Hintergrundfarbe für das Bandcamp-Element festlegen. Fehlt der Parameter, wird die Standardhintergrundfarbe weiß (Hexcode: #ffffff) angenommen. Möchten Sie z.B. einen dunkleren Hintergrund anzeigen, wählen Sie mit <span class="code">bgcol-<b>333333</b></span> ein <span style="background-color:#333;color:#fff;padding:0 5px">dunkles Grau</span> aus.
 p Derzeit erlaubt Bandcamp nur weiß (ffffff) oder dunkelgrau (333333) als Hintergrundfarbe. Andere Farbcodes werden ignoriert.
 h6.top20 <span class="label">linkcol</span> &mdash; Farbe für Links festlegen
 p.
-  Sie können auch die Farbe der Bandcamp-Links einstellen. Dies empfiehlt sich z.B., wenn Sie die Hintergrundfarbe ändern
-  und die Links nur noch schlecht lesbar sind. Wählen Sie dann eine passende Farbe aus (bei dunklem Hintergrund z.B. weiß)
-  und ergänzen diese im Parameter <span class="code">linkcol-<b>ffffff</b></span>. Fehlt der Parameter, wird standardmäßig
-  die <span style="color:#0687f5">Linkfarbe '0687f5' verwendet</span>.
+  Sie können auch die Farbe der Bandcamp-Links einstellen. Dies empfiehlt sich z.B., wenn Sie die Hintergrundfarbe ändern und die Links nur noch schlecht lesbar sind. Wählen Sie dann eine passende Farbe aus (bei dunklem Hintergrund z.B. weiß) und ergänzen diese im Parameter <span class="code">linkcol-<b>ffffff</b></span>. Fehlt der Parameter, wird standardmäßig die <span style="color:#0687f5">Linkfarbe '0687f5' verwendet</span>.
 p.
-  Farbcodes werden als 6-stellige Hexadezimalzahl kodiert. Welche Farbe welchen Hexcode besitzt, können Sie z.B. auf
-  <a target="_blank" href="http://htmlcolorcodes.com/color-picker/">dieser Webseite</a> herausfinden.
+  Farbcodes werden als 6-stellige Hexadezimalzahl kodiert. Welche Farbe welchen Hexcode besitzt, können Sie z.B. auf <a target="_blank" href="https://htmlcolorcodes.com/color-picker/">dieser Webseite</a> herausfinden.
 h6.top20 <span class="label">tracklist</span> &mdash; Anzeige der Tracklist aktivieren
 p.
-  In der Layoutansicht <b>standard</b> lässt sich für Bandcamp-Alben auch eine Tracklist, also eine fortlaufende Liste der einzelnen Songs,
-  anzeigen. Der <span class="code"><b>tracklist</b></span>-Parameter funktioniert wie ein Aktivierungsschalter. Wird er angegeben,
-  erscheint die Tracklist. Fehlt er, wird auch keine Tracklist generiert. Für eine Tracklist wird die Höhe des Anzeigeelements
-  automatisch vergrößert. Bei aktivierter Tracklist werden standardmäßig 2 Tracks angezeigt. Möchten Sie mehr Tracks anzeigen, können
-  Sie dem Parameter einen Wert mitgeben, also z.B. <span class="code">tracklist-6</span> für 6 Tracks.
+  In der Layoutansicht <b>standard</b> lässt sich für Bandcamp-Alben auch eine Tracklist, also eine fortlaufende Liste der einzelnen Songs, anzeigen. Der <span class="code"><b>tracklist</b></span>-Parameter funktioniert wie ein Aktivierungsschalter. Wird er angegeben, erscheint die Tracklist. Fehlt er, wird auch keine Tracklist generiert. Für eine Tracklist wird die Höhe des Anzeigeelements automatisch vergrößert. Bei aktivierter Tracklist werden standardmäßig 2 Tracks angezeigt. Möchten Sie mehr Tracks anzeigen, können Sie dem Parameter einen Wert mitgeben, also z.B. <span class="code">tracklist-6</span> für 6 Tracks.
 p In der Layoutansicht <b>slim</b> oder <b>artworkonly</b> kann keine Tracklist gezeigt werden.
 h6.top20: strong Beispiele
 p.
-  Es soll ein Bandcamp-Album im Standardlayout, mit großem Albumcover, dunklem Hintergrund, weißen Links und einer Standard-Tracklist
-  (2 Tracks) ausgegeben werden. Der zugehörige Videoload-Befehl hieße dann:
+  Es soll ein Bandcamp-Album im Standardlayout, mit großem Albumcover, dunklem Hintergrund, weißen Links und einer Standard-Tracklist (2 Tracks) ausgegeben werden. Der zugehörige Videoload-Befehl hieße dann:
 +LiveView("bandcamp layout-standard artwork-big bgcol-333333 linkcol-ffffff tracklist", "2172528119")
 p.
   Zusätzlich soll die Tracklist 8 Songs anzeigen und die Breite soll 500 Pixel betragen:
@@ -89,7 +75,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#bandcamp-id
       | Klicken Sie auf eine der drei Layout-Grafiken
       .clearfix: img.googledrive(alt="videoload/bandcamp-id3.jpg")
     li
-      | Klicken Sie in das Feld <span class="label blue">Embed</span>, welches den <span class="code">#{lt}iframe#{gt}</span>-Code enthält und
+      | Klicken Sie in das Feld <span class="label blue">Embed</span>, welches den <span class="code">!{lt}iframe!{gt}</span>-Code enthält und
       | kopieren Sie diesen mit <span class="code">Strg-C</span> (Windows) oder <span class="code">Cmd-C</span> (Mac) in die Zwischenablage.
       .clearfix: img.googledrive(alt="videoload/bandcamp-id4.jpg")
     li
