--- a/src/jade/provider/dctptv.pug
+++ b/src/jade/provider/dctptv.pug
@@ -6,8 +6,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#dctptv-id')
 #dctptv-id(style="display:none")
   h6.top20: strong DCTP-ID manuell ermitteln
   p.
-    Sobald Sie die Einzelansicht des gewünschten Filmbeitrags auf der DCTPtv-Seite aufgerufen haben, können Sie die benötigte ID
-    des Objekts aus verschiedenen Quellen ermitteln:
+    Sobald Sie die Einzelansicht des gewünschten Filmbeitrags auf der DCTPtv-Seite aufgerufen haben, können Sie die benötigte ID des Objekts aus verschiedenen Quellen ermitteln:
   ol
     li
       | Oben aus der angezeigten Browser-URL (die einfachste Methode):
