--- a/src/jade/provider/funnyordie.pug
+++ b/src/jade/provider/funnyordie.pug
@@ -8,8 +8,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#funnyordie-
 #funnyordie-id(style="display:none")
   h6.top20: strong FunnyOrDie-ID manuell ermitteln
   p.
-    Sobald Sie die Einzelansicht des gewünschten Videos auf der FunnyOrDie-Seite aufgerufen haben, können Sie die benötigte ID
-    des Objekts aus verschiedenen Quellen ermitteln:
+    Sobald Sie die Einzelansicht des gewünschten Videos auf der FunnyOrDie-Seite aufgerufen haben, können Sie die benötigte ID des Objekts aus verschiedenen Quellen ermitteln:
   ol
     li
       | Oben aus der angezeigten Browser-URL (die einfachste Methode):
@@ -18,7 +17,7 @@ p.text-right: a(href="#", title="data-bind=click:function(){toggle('#funnyordie-
       | Alternativ klicken Sie auf das Symbol <span class="label">MORE</span>:
       .clearfix: img.googledrive(alt="videoload/funnyordie-id2.jpg")
     li
-      | danach auf <span class="label">#{lt}/#{gt} EMBED</span>:
+      | danach auf <span class="label">!{lt}/!{gt} EMBED</span>:
       .clearfix: img.googledrive(alt="videoload/funnyordie-id3.jpg")
     li
       | Kopieren Sie nun den Einbettungsbefehl (am besten mithilfe einen Texteditors). Der markierte Text entspricht der ID.
