--- a/test/testpagelazy.pug
+++ b/test/testpagelazy.pug
@@ -1,20 +1,19 @@
-//- var jsFolder (dynamically set in gulp script: DEV='./' PROD=same as staticURL)
 doctype html
 html(lang="de")
   head
     meta(charset="UTF-8")
     title Testseite für den video2day-Generator (lazyload-Test), v#{pkgVersion}
-    meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     style.
       body { background: #f5f5f5; color: #444; padding: 10px 20px; font-family: Tahoma, sans-serif; }
       #wrapper { width: 800px; margin: 0 auto; background: #fff; }
       .storyContent { width: 600px; margin: 0 auto; padding: 10px; border: 1px solid #ccc; }
       #testDIV p { margin: 3em 0 0; }
-  body
+  body.debug
     #wrapper
-      #iframeBtns
       .storyContent
         #testDIV
-    script(src!=jsFolder + "videoload2.js")
-    script(src!=jsFolder + "videoload2-lazy.js")
+    script(src="https://static.twoday.net/sys.files/js/jquery/jquery.min.js")
+    script(src="./videoload2.js")
+    script(src="./videoload2-lazy.js")
