Remove Liveleak, add Itemfix

--- a/src/jade/videoload-provider.pug
+++ b/src/jade/videoload-provider.pug
@@ -38,7 +38,7 @@ ul#providerTabs.tabs.tabBlue(title="data-bind=foreach:providerNames()")
   #tab-funnyordie: include ./provider/funnyordie.pug
   #tab-giphy: include ./provider/giphy.pug
   #tab-jsfiddle: include ./provider/jsfiddle.pug
-  #tab-liveleak: include ./provider/liveleak.pug
+  #tab-itemfix: include ./provider/itemfix.pug
   #tab-metacafe: include ./provider/metacafe.pug
   #tab-slides: include ./provider/slides.pug
   #tab-slideshare: include ./provider/slideshare.pug
