Removed Metacafe † Strawpoll † FunnyOrDie=now YT

--- a/src/jade/videoload-version2.pug
+++ b/src/jade/videoload-version2.pug
@@ -60,7 +60,7 @@ p.
         img.neonimg.th(title="data-bind=attr:{src:$parent.providerImgUrl($data)}", width="48", height="48")
 p.text-center: span.sublabel Klick auf Icon öffnet die jeweilige Anbieterseite
 p.
-  Videoload bietet nicht nur Zugriff auf die wichtigsten Videoanbieter, sondern stellt auch Audioinhalte (z.B. via Bandcamp, Soundcloud), Präsentationen (z.B. via Slides, Slideshare, Speakerdeck), GIFs (via Giphy), Code-Snippets (via Jsfiddle) oder eigene Umfragen (via Strawpoll) bereit.
+  Videoload bietet nicht nur Zugriff auf die wichtigsten Videoanbieter, sondern stellt auch Audioinhalte (z.B. via Bandcamp, Soundcloud), Präsentationen (z.B. via Slides, Slideshare, Speakerdeck), GIFs (via Giphy) oder Code-Snippets (via Jsfiddle) bereit.
 .accComponent.accDark.accChevron
   h2.accHeadline: a(href="#") Erstmalige Installation
   .accElement: .accContent
