--- a/src/jade/videotool-version2.pug
+++ b/src/jade/videotool-version2.pug
@@ -4,7 +4,7 @@
     a(
       href="https://neonwilderness.twoday.net/stories/videoload2",
       style="position:absolute;right:0;font-size:12px;z-index:1"
-    ) Videoload2-Script installiert?
+    ) Videoload2-Script (v#{pkgVersion}) installiert?
 .row
   .small-9.columns
     p.hint
