--- a/src/jade/videotool-version2.pug
+++ b/src/jade/videotool-version2.pug
@@ -2,7 +2,7 @@
 #prependStory.videotool2(style="display:none")
   div(style="position:relative")
     a(
-      href="https://neonwilderness.twoday.net/stories/videoload2",
+      href="/stories/videoload2",
       style="position:absolute;right:0;font-size:12px;z-index:1"
     ) Videoload2-Script (v#{pkgVersion}) installiert?
 .row
@@ -81,10 +81,8 @@ fieldset#fldOptions(style="display:none")
     .small-3.columns.pad6: label(for="txtSlide") Startseite:
     .small-3.columns.end: input.bottom0#txtSlide(type="text", title="data-bind=textInput:txtSlide")
   .row(title="data-bind=if:providerTemplate()==='TmplSlides'")
-    .small-3.columns.pad6: label(for="txtSlide") Startseite:
-    .small-3.columns: input.bottom0#txtSlide(type="text", title="data-bind=textInput:txtSlide")
     .small-3.columns.pad6: label(for="optColor") Farbschema:
-    .small-3.columns
+    .small-9.columns
       select#optColor(name="optColor", title="data-bind=options:colorOptions, optionsText:'colorText', optionsValue:'colorValue', value:optColor")
   .row(title="data-bind=if:providerTemplate()==='TmplSoundcloud'")
     .small-6.columns.pad6
