Add overrides to fix audit issues

--- a/src/jade/teststory.pug
+++ b/src/jade/teststory.pug
@@ -5,12 +5,12 @@ html(lang="de")
     title Testseite Twoday-Story, v#{pkgVersion}
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    script(type="text/javascript", src="https://static.twoday.net/sys.files/js/jquery/jquery.min.js")
-    script(type="text/javascript", src="https://static.twoday.net/cdn/files/fastclick-min-js.js")
+    script(src="https://static.twoday.net/sys.files/js/jquery/jquery.min.js")
+    script(src="https://static.twoday.net/cdn/files/fastclick-min-js.js")
     link(rel="stylesheet", href="https://neonwilderness.twoday.net/main.css")
     link(rel="stylesheet", href="https://static.twoday.net/cdn/files/foundation55-min-css.css")
     link(rel="stylesheet", href="https://static.twoday.net/cdn/files/rainy-min-css.css")
-    script(type="text/javascript", src="https://static.twoday.net/cdn/files/modernizr-custom-min-js.js")
+    script(src="https://static.twoday.net/cdn/files/modernizr-custom-min-js.js")
   body.videoload2.debug
     .inner-wrap
       #foundation5.container
