Fix triggering ID in teststory/testtool.pug

--- a/src/jade/teststory.pug
+++ b/src/jade/teststory.pug
@@ -16,7 +16,8 @@ html(lang="de")
       #foundation5.container
         .row
           #content.large-9
-            h3.storyTitle Videos reloaded - Die Videoload-Version 2
-            .storyContent: include ./videoload-version2.pug
+            #videoload2.story
+              h3.storyTitle Videos reloaded - Die Videoload-Version 2
+              .storyContent: include ./videoload-version2.pug
           #sidebar.large-3
     script(src="https://static.twoday.net/cdn/files/loader-min-js.js")
