--- a/src/jade/testtool.pug
+++ b/src/jade/testtool.pug
@@ -14,10 +14,10 @@ html(lang="de")
   body.videotool2.debug
     .inner-wrap
       #foundation5.container
-        .story#videotool2
-          .row
-            #content.large-9
+        .row
+          #content.large-9
+            #videotool2.story
               h3.storyTitle Videotool (Version #{pkgVersion})
               .storyContent: include ./videotool-version2.pug
-            #sidebar.large-3
+          #sidebar.large-3
     script(src="https://static.twoday.net/cdn/files/loader-min-js.js")
